--- a/admin/templates/hostname-update.html
+++ b/admin/templates/hostname-update.html
@@ -11,87 +11,81 @@
 	{% if message is not empty %}
 	<div class="alert alert-danger" role="alert">{{ message }}</div>
 	{% endif %}
-	<form method="post" action="hostname-update1.php">
+	<div class="row">
+		<div class="col-2">PTR</div>
+		<div class="col-10">反解，查詢 IP 所對應的主機名稱</div>
+	</div>
+	<div class="row">
+		<div class="col-2">NS</div>
+		<div class="col-10">查詢管理領域名稱 (zone) 的伺服器主機名</div>
+	</div>
+	<div class="row">
+		<div class="col-2">SOA</div>
+		<div class="col-10">查詢管理領域名稱的伺服器管理資訊</div>
+	</div>
+	<div class="row">
+		<div class="col-2">A</div>
+		<div class="col-10">是指IPv4的位址</div>
+	</div>
+	<div class="row">
+		<div class="col-2">AAAA</div>
+		<div class="col-10">是指IPv6的位址</div>
+	</div>
+	<div class="row">
+		<div class="col-2">CNAME</div>
+		<div class="col-10">依據Wiki的說明，CNAME真實名稱記錄（英語：Canonical Name Record），即CNAME記錄，是域名系統（DNS）的一種記錄。 CNAME記錄用於將一個域名（同名）映射到另一個域名（真實名稱），域名解析伺服器遇到CNAME記錄會以映射到的目標重新開始查詢。 這對於需要在同一個IP位址上運行多個服務的情況來說非常方便。</div>
+	</div>
+	<div class="row">
+		<div class="col-2">TXT</div>
+		<div class="col-10">文字記錄，依據Wiki的說明，最初是為任意可讀的文字 DNS 記錄，後來通常存放一些驗證用的資訊。<br>
+			MX：依據Wiki的說明，郵件交換記錄 (MX record)是域名系統（DNS）中的一種資源記錄類型，用於指定負責處理發往收件人域名的郵件伺服器。MX記錄允許設定一個優先次序，當多個郵件伺服器可用時，會根據該值決定投遞郵件的伺服器。簡單郵件傳輸協定（SMTP）會根據MX記錄的值來決定郵件的路由過程。</div>
+	</div>
+	<div class="row">
+		<div class="col-2"></div>
+		<div class="col-10"></div>
+	</div>
+	<div class="row">
+		<div class="col-2"></div>
+		<div class="col-10"></div>
+	</div>
+			<form method="post" action="hostname-update1.php">
 		<input type="hidden" name="csrf_token" value="{{csrf_token}}">
 		<input type="hidden" name="id" value="{{id}}">
-
-		{% if ip.data_type=="ipv4" %}
-		<input type="hidden" name="type" value="ipv4">
-		<input type="hidden" name="priority" value="0">
 		<div class="row form-group">
-			<label class="col-12">{% trans "主機名稱" %} : {{ip['hostname']}} </label>
+			<label class="col-2"><font color=red>*</font>{% trans "Zone" %}</label>
+			<input class="col-10 form-control" type="text" name="zone" value="{{rows[0].zone}}">
 		</div>
 		<div class="row form-group">
-			<label class="col-12">{% trans "網域" %} : {{ip['domain']}}</label>
-		</div>	
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "IPv4位址" %}</label>
-			<input type="text" class="col-10 form-control" name="ipv4" value="{{ip['name']}}" required>
+			<label class="col-2"><font color=red>*</font>{% trans "Host" %}</label>
+			<input class="col-10 form-control" type="text" name="host" value="{{rows[0].host}}">
 		</div>
 		<div class="row form-group">
-			<label class="col-2">{% trans "Server使用" %}</label>
-			<label><input type="checkbox" name="is_local" value="1" {%if is_local %}checked{%endif%}> {% trans "如果此主機是提供給Client端連線使用，則請打勾。如果不知道用途，請不要打勾。" %}</label>
+			<label class="col-2"><font color=red>*</font>{% trans "Type" %}</label>
+			<div class="col-10">
+				<div class="row">
+				<label class="col-2"><input type="radio" name="type" value="A" {%if rows[0].type=='A'%}checked{%endif%}>A</label> 
+				<label class="col-2"><input type="radio" name="type" value="AAAA" {%if rows[0].type=='AAAA'%}checked{%endif%}>AAAA</label> 
+				<label class="col-2"><input type="radio" name="type" value="CNAME" {%if rows[0].type=='CNAME'%}checked{%endif%}>CNAME</label> 
+				<label class="col-2"><input type="radio" name="type" value="TXT" {%if rows[0].type=='TXT'%}checked{%endif%}>TXT</label> 
+				<label class="col-2"><input type="radio" name="type" value="MX" {%if rows[0].type=='MX'%}checked{%endif%}>MX</label> 
+				<label class="col-2"><input type="radio" name="type" value="NS" {%if rows[0].type=='NS'%}checked{%endif%}>NS</label>
+				<label class="col-2"><input type="radio" name="type" value="SOA" {%if rows[0].type=='SOA'%}checked{%endif%}>SOA</label> 
+				<label class="col-2"><input type="radio" name="type" value="PTR" {%if rows[0].type=='PTR'%}checked{%endif%}>PTR</label>  
+			</div>
 		</div>
-		{% elseif ip.data_type =="ipv6" %}
-		<input type="hidden" name="type" value="ipv6">
-		<input type="hidden" name="priority" value="0">
-		<div class="row form-group">
-			<label class="col-12">{% trans "主機名稱" %} : {{ip['hostname']}} </label>
-		</div>
-		<div class="row form-group">
-			<label class="col-12">{% trans "網域" %} : {{ip['domain']}}</label>
-		</div>	
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "IPv6位址" %}</label>
-			<input type="text" class="col-10 form-control" name="ipv6" value="{{ip['name']}}" required>
 		</div>
 		<div class="row form-group">
-			<label class="col-2">{% trans "Server使用" %}</label>
-			<label><input type="checkbox" name="is_local" value="1" {%if is_local %}checked{%endif%}> {% trans "如果此主機是提供給Client端連線使用，則請打勾。如果不知道用途，請不要打勾。" %}</label>
-		</div>
-		{% elseif ip.data_type == "cname" %}
-		<input type="hidden" name="type" value="cname">
-		<input type="hidden" name="mx_priority" value="0">
-		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "主機名稱" %} : {{ip['hostname']}} </label>
+			<label class="col-2"><font color=red>*</font>{% trans "Data" %}</label>
+			<input type="text" class="col-10 form-control" name="data" required value="{{rows[0].data}}">
 		</div>
 		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "網域" %} : {{ip['domain']}}</label>
-		</div>	
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "指向" %}</label>
-			<input type="text" class="col-10 form-control" name="cname" value="{{ip['name']}}" required>
-		</div>
-		{% elseif ip.data_type == "txt" %}
-		<input type="hidden" name="type" value="TXT">
-		<input type="hidden" name="mx_priority" value="0">
-		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "主機名稱" %} : {{ip['hostname']}} </label>
+			<label class="col-2">{% trans "TTL" %}</label>
+			<input type="text" class="col-10 form-control" name="ttl" value="{{rows[0].ttl}}">
 		</div>
 		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "網域" %} : {{ip['domain']}}</label>
-		</div>	
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "TXT值" %}</label>
-			<input type="text" class="col-10 form-control" name="txt" value="{{ip['name']}}" required>
+			<label class="col-2">{% trans "MX Priority" %}</label>
+			<input type="text" class="col-10 form-control" name="mx_priority" value="{{rows[0].mx_priority}}">
 		</div>
-		{% elseif ip.data_type == "MX" %}
-		<input type="hidden" name="type" value="MX">
-		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "主機名稱" %} : {{ip['hostname']}} </label>
-		</div>
-		<div class="row form-group">
-			<label class="col-12"><font color=red>*</font>{% trans "網域" %} : {{ip['domain']}}</label>
-		</div>	
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "MX" %}</label>
-			<input type="text" class="col-10 form-control" name="MX" value="{{ip['name']}}" required>
-		</div>
-		<div class="row form-group">
-			<label class="col-2"><font color=red>*</font>{% trans "優先順序" %}</label>
-			<input type="text" class="col-10 form-control" name="mx_priority" value="{{ip['mx_priority']}}" required>
-		</div>
-		{% endif %}
 		<input type="submit" value="{% trans "修改" %}" class="btn btn-primary btn-sm"> &nbsp;
 		<input type="reset" value="{% trans "取消" %}" class="btn btn-secondary btn-sm"> &nbsp;
 	</form>
