--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -14,7 +14,7 @@
 	<div class="col-4 login-area" style="padding-top: 0;padding-left: 0;padding-right: 0;">
 		<div style="padding: 10px 15px 5px 10px;border-top-left-radius: 10px;border-top-right-radius: 10px;background: #4a9afb;">
 			<a href="/admin/"><img src="/image/LOGO-footer.png" class="login-title" style="height:40px;"></a>
-			<h4 style="display: inline-block;margin:0;padding: 0;color:#FFF;vertical-align: middle;"> &nbsp;{% trans "後台登入" %}</h4>
+			<h4 style="display: inline-block;margin:0;padding: 0;color:#FFF;vertical-align: middle;"> &nbsp;{% trans "登入" %}</h4>
 		</div>
 		<form method="post" action="login1.php" style="padding:20px;text-align: center;">
 			<input type="hidden" name="csrf_token" value="{{csrf_token}}">
