--- a/admin/templates/apikey-add.html
+++ b/admin/templates/apikey-add.html
@@ -12,6 +12,7 @@
 	<div class="alert alert-danger" role="alert">{{ message }}</div>
 	{% endif %}
 	<p>
+		API Key由系統自動亂數產生，管理者可以手動修改，長度沒有限制。<br>
 		每次您進入這個頁面時或者更新這個頁面時，系統都會自動隨機產生一個新的 API金鑰 給您。<br>
 		API金鑰 是用來提供給DDNS client 連線到DDNS server的金鑰。使用API金鑰就可以取代帳號跟密碼，透過API金鑰 做為登入使用。<br>
 		API金鑰是提供給 DDNS Client使用的，請不要將DDNS Server的帳號給密碼提供別人，也不需要提供給DDNS Client，因為DDNS Client沒有輸入帳號跟密碼的地方。<br>
