--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -25,7 +25,7 @@
 					<input type="password" class="form-control input-section" id="pw" placeholder="{% trans "請輸入密碼" %}" name="pw" required>
 				</div>
 				<div class="login-btn-area">
-					<button class="login-btn input-section btn btn-primary" type="submit">{% trans "Login" %}</button>
+					<button class="login-btn input-section btn btn-primary" type="submit">{% trans "登入" %}</button>
 				</div>
 			</div>
 		</form>
