--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -28,9 +28,9 @@
       <img src="/image/LOGO-header.png">
     </a>
     {% if is_admin %}
-      <a href="logout.php">{% trans "登出" %}</a><img src="/image/logout.png" width="20px"></a>
+      <a href="logout.php">{% trans "登出" %}</a></a>
       {% else %}
-      <a href="login.php">{% trans "登入" %}<img src="/image/login.png" width="20px"></a>
+      <a href="login.php">{% trans "登入" %}</a>
       {% endif %}
     </div>
   </nav>
