--- a/admin/templates/hostname-add.html
+++ b/admin/templates/hostname-add.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="row form-group">
 			<label class="col-2"><font color=red>*</font>{% trans "Host" %}</label>
-			<input class="col-10 form-control" type="text" name="host" required>
+			<input class="col-10 form-control" type="text" name="host">
 		</div>
 		<div class="row form-group">
 			<label class="col-2"><font color=red>*</font>{% trans "Type" %}</label>
