--- a/admin/templates/user_list.html
+++ b/admin/templates/user_list.html
@@ -14,7 +14,7 @@
 	<div class="table-responsive">
 	<table class="table table-striped">
 		<tr>
-			<td>{% trans "電子郵件" %}</td>
+			<td>{% trans "帳號" %}</td>
 			<td></td>
 			<td></td>
 		</tr>
